[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/cave.png" type="Texture" id=1]
[ext_resource path="res://levels/CharacterCreation.gd" type="Script" id=2]
[ext_resource path="res://StaticElcitrap.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/character_sprites/faces/0.png" type="Texture" id=4]
[ext_resource path="res://sprites/left_arrow.png" type="Texture" id=5]
[ext_resource path="res://sprites/character_sprites/bodies/0.png" type="Texture" id=6]
[ext_resource path="res://sprites/character_sprites/hair/0.png" type="Texture" id=7]
[ext_resource path="res://sprites/right_arrow.png" type="Texture" id=8]
[ext_resource path="res://sprites/next.png" type="Texture" id=9]
[ext_resource path="res://levels/Pond.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 1, 1 ) ]
}

[node name="CharacterCreation" type="Node2D"]
script = ExtResource( 2 )
next_scene = ExtResource( 10 )
Elcitrap = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 496, 296 )
scale = Vector2( 2.06073, 2.28162 )
current = true

[node name="cave" type="Sprite" parent="."]
position = Vector2( 512.889, 298 )
scale = Vector2( 0.559259, 0.559259 )
texture = ExtResource( 1 )

[node name="body" type="Sprite" parent="."]
position = Vector2( 512, 392 )
texture = ExtResource( 6 )

[node name="face" type="Sprite" parent="."]
position = Vector2( 512, 160 )
texture = ExtResource( 4 )

[node name="hair" type="Sprite" parent="."]
position = Vector2( 512, 129 )
texture = ExtResource( 7 )

[node name="hair_left" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 24.0
margin_right = 840.0
margin_bottom = 468.0
rect_scale = Vector2( 0.214384, 0.214384 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hair_right" type="TextureButton" parent="."]
margin_left = 584.0
margin_top = 24.0
margin_right = 1096.0
margin_bottom = 468.0
rect_scale = Vector2( 0.214384, 0.214384 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="face_left" type="TextureButton" parent="."]
margin_left = 280.0
margin_top = 136.0
margin_right = 792.0
margin_bottom = 580.0
rect_scale = Vector2( 0.214384, 0.214384 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="face_right" type="TextureButton" parent="."]
margin_left = 632.0
margin_top = 136.0
margin_right = 1144.0
margin_bottom = 580.0
rect_scale = Vector2( 0.214384, 0.214384 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="body_left" type="TextureButton" parent="."]
margin_left = 256.0
margin_top = 264.0
margin_right = 768.0
margin_bottom = 708.0
rect_scale = Vector2( 0.214384, 0.214384 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="body_right" type="TextureButton" parent="."]
margin_left = 656.0
margin_top = 264.0
margin_right = 1168.0
margin_bottom = 708.0
rect_scale = Vector2( 0.214384, 0.214384 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="TextureButton" parent="."]
margin_left = 832.0
margin_top = 392.0
margin_right = 1464.0
margin_bottom = 1129.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 1 )
anims/Zoom = SubResource( 2 )
[connection signal="pressed" from="hair_left" to="." method="_on_hair_left_pressed"]
[connection signal="pressed" from="hair_right" to="." method="_on_hair_right_pressed"]
[connection signal="pressed" from="face_left" to="." method="_on_face_left_pressed"]
[connection signal="pressed" from="face_right" to="." method="_on_face_right_pressed"]
[connection signal="pressed" from="body_left" to="." method="_on_body_left_pressed"]
[connection signal="pressed" from="body_right" to="." method="_on_body_right_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
